Fix to copy to replace files in multiple file uploads

--- a/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents-upload.html
+++ b/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents-upload.html
@@ -53,7 +53,7 @@
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-supportingdocuments-files">
             {% if data["appealsub-"+version+"-appealdocuments-supportingdocuments-files"] and (data["appealsub-"+version+"-appealdocuments-supportingdocuments-files"] != "") %}
-              Upload more files
+              Replace the files
             {% else  %}
               Drag and drop or choose files
             {% endif %}
