AS-4393 Review content in appeal docs

--- a/app/views/appellant-submission/v13/full/appeal-documents/plans-drawings-upload.html
+++ b/app/views/appellant-submission/v13/full/appeal-documents/plans-drawings-upload.html
@@ -28,7 +28,7 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          New plans and drawings
+          Plans or drawings
         </h1>
 
         {% if data["appealsub-"+version+"-appealdocuments-plansdrawings-files"] and (data["appealsub-"+version+"-appealdocuments-plansdrawings-files"] != "") %}
