--- a/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents-upload.html
+++ b/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents-upload.html
@@ -28,7 +28,7 @@
           Upload documents for your appeal
         </span>
         <h1 class="govuk-heading-l">
-          New supporting documents
+          Other supporting documents
         </h1>
 
         {% if data["appealsub-"+version+"-appealdocuments-supportingdocuments-files"] and (data["appealsub-"+version+"-appealdocuments-supportingdocuments-files"] != "") %}
