--- a/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents.html
+++ b/app/views/appellant-submission/v13/full/appeal-documents/supporting-documents.html
@@ -27,24 +27,15 @@
         <span class="govuk-caption-l">
           Upload documents for your appeal
         </span>
-        <h1 class="govuk-heading-l">
-          Supporting documents
-        </h1>
-
-        <p class="govuk-body">
-          You do not need to submit the supporting documents from your planning application. We'll get these from the local planning department.
-        </p>
-        <p class="govuk-body">
-          You can submit new or updated documents that support your appeal.
-        </p>
 
         {{ govukRadios({
           idPrefix: "appealsub-"+version+"-appealdocuments-supportingdocuments",
           name: "appealsub-"+version+"-appealdocuments-supportingdocuments",
           fieldset: {
             legend: {
-              text: "Do you want to submit any new supporting documents with your appeal?",
-              classes: "govuk-fieldset__legend--m"
+              text: "Do you have any other new documents that support your appeal?",
+              isPageHeading: true,
+              classes: "govuk-fieldset__legend--l"
             }
           },
           items: [
