Updated homepage with AS-4412 ticket link

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,12 +79,13 @@
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (1)
+                          Jira Tickets (2)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4086" target="_blank">AS-4086 Revert to getting plans from appellant</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4412" target="_blank">AS-4412 Fix upload fields to not overwrite previously uploaded file when blank</a></li>
                         </ul>
                       </div>
                     </details>
