--- a/app/views/interested-party/v2/check-answers.html
+++ b/app/views/interested-party/v2/check-answers.html
@@ -82,8 +82,16 @@
         </div>
       </dl>
 
+      <h2 class="govuk-heading-m">
+        Now send your comments
+      </h2>
+
+      <p class="govuk-body">
+        By sending your comments, you are confirming that, to the best of your knowledge, the details you are providing are correct.
+      </p>
+
       {{ govukButton({
-        text: "Continue",
+        text: "Accept and send",
         href: "comment-received"
       }) }}
 
