--- a/app/views/interested-party/v2/comment-received.html
+++ b/app/views/interested-party/v2/comment-received.html
@@ -44,11 +44,11 @@
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-        Your comments will be shared with the appellant and Local Planning Department.
+        Your comments will be shared with the applicant and local planning department.
       </p>
 
       <p class="govuk-body">
-        An inspector will review them when determining the appeal.
+        An Inspector will review them when determining the appeal.
       </p>
 
       <!-- <p class="govuk-body">
