--- a/app/views/interested-party/v2/guidance.html
+++ b/app/views/interested-party/v2/guidance.html
@@ -43,7 +43,7 @@
       </h2>
 
       <p class="govuk-body">
-        Any previous comments that you submitted as part of an application will be considered by the Inspector. The Local Planning Department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
+        Any previous comments that you submitted as part of an application will be considered by the Inspector. The local planning department shares these with the Planning Inspectorate, so there is no need to submit repeat comments.
       </p>
 
       <p class="govuk-body">
@@ -57,7 +57,7 @@
       </ul>
 
       <p class="govuk-body">
-        If you include anything you should not, we may ask you to resubmit your final comments. This would delay the appeal.
+        If you include anything you should not, we may ask you to resubmit your comments. This would delay the appeal.
       </p>
 
       <details class="govuk-details" data-module="govuk-details">
@@ -69,7 +69,7 @@
         <div class="govuk-details__text">
 
           <p class="govuk-body">
-            Sensitive information refers to:
+            You should not include:
           </p>
 
           <ul class="govuk-list govuk-list--bullet">
