--- a/app/views/interested-party/v2/appeal-search-address.html
+++ b/app/views/interested-party/v2/appeal-search-address.html
@@ -29,7 +29,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-      <form action="appeal-select-appeal" method="post">
+      <form action="appeal-select-appeal?version=" method="post">
 
         <span class="govuk-caption-l">{{ subServiceName }}</span>
 
