Content update on how to answer as agent

--- a/app/views/appellant-submission/v13/full/contact-details/how-to-answer.html
+++ b/app/views/appellant-submission/v13/full/contact-details/how-to-answer.html
@@ -34,7 +34,7 @@
           Answer the rest of the questions as though you're the original applicant.
         </p>
         <p class="govuk-body govuk-!-margin-bottom-9">
-          For example, if we say "you", we're referring to {{ data["appealsub-"+version+"-aboutyou-applicantname"] }}.
+          For example, when we say "you", we're referring to {{ data["appealsub-"+version+"-aboutyou-applicantname"] }}.
         </p>
 
         {{ govukButton({
