Addition of email comms to the appeal submission

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -48,20 +48,20 @@
                       Version 13 - Full appeal submission
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
-                      <!--li>
-                        <a href="/appellant-submission/v13/costs-guidance/overview">Guidance - Claim planning appeal costs</a>
-                      </li><br>
-                      <li>
-                        <a href="/appellant-submission/v13/">Start from 'Before you start'</a>
-                      </li>
-                      <li>
-                        <a href="/appellant-submission/v13/skip/full-bys-cya">Start from check your answers in 'Before you start'</a>
-                      </li><br-->
                       <li>
                         <a href="/appellant-submission/v13/skip/full-task-list">Start from task list</a>
                       </li>
                       <li>
                         <a href="/appellant-submission/v13/skip/full-check-answers">Start from check your answers</a>
+                      </li><br>
+                      <li>
+                        <a href="/appellant-submission/v13/email/confirmation">Confirmation email</a>
+                      </li>
+                      <li>
+                        <a href="/appellant-submission/v13/email/start">Start email</a>
+                      </li>
+                      <li>
+                        <a href="/appellant-submission/v13/email/final-comments">Final comments email</a>
                       </li>
                     </ul>
                     <!--details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
