--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,19 +41,41 @@
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "wip"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Version 13 - Full appeal submission
                     </h3>
+                    <h4 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Guidance
+                    </h4>
                     <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/appellant-submission/v13/costs-guidance/overview">Guidance - Claim planning appeal costs</a>
+                      </li>
+                    </ul>
+                    <h4 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Submission journeys
+                    </h4>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/appellant-submission/v13/">Start from 'Before you start'</a>
+                      </li>
+                      <li>
+                        <a href="/appellant-submission/v13/skip/full-bys-cya">Start from check your answers in 'Before you start'</a>
+                      </li>
                       <li>
                         <a href="/appellant-submission/v13/skip/full-task-list">Start from task list</a>
                       </li>
                       <li>
                         <a href="/appellant-submission/v13/skip/full-check-answers">Start from check your answers</a>
-                      </li><br>
+                      </li>
+                    </ul>
+                    <h4 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Emails
+                    </h4>
+                    <ul class="govuk-list govuk-list--bullet">
                       <li>
                         <a href="/appellant-submission/v13/email/confirmation">Confirmation email</a>
                       </li>
@@ -79,13 +101,16 @@
                     <details class="govuk-details" data-module="govuk-details">
                       <summary class="govuk-details__summary">
                         <span class="govuk-details__summary-text">
-                          Jira Tickets (2)
+                          Jira Tickets (5)
                         </span>
                       </summary>
                       <div class="govuk-details__text">
                         <ul class="govuk-list govuk-list-bulleted">
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4086" target="_blank">AS-4086 Revert to getting plans from appellant</a></li>
                           <li><a href="https://pins-ds.atlassian.net/browse/AS-4412" target="_blank">AS-4412 Fix upload fields to not overwrite previously uploaded file when blank</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4108" target="_blank">AS-4108 Full Planning - Notify Appeal Valid/Start Comms</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4252" target="_blank">AS-4252 Submission confirmation email (GovNotify) - appellant/agent</a></li>
+                          <li><a href="https://pins-ds.atlassian.net/browse/AS-4362" target="_blank">AS-4362 Appellant notification email: statement of case and IP comments / final comments prompt</a></li>
                         </ul>
                       </div>
                     </details>
