--- a/app/views/appellant-submission/v13/full/confirmation.html
+++ b/app/views/appellant-submission/v13/full/confirmation.html
@@ -51,6 +51,10 @@
         <a href="javascript:preventDefault();">What did you think of this service?</a> (takes 2 minutes)
       </p>
 
+      <br><br><br><br><br>
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+      <p class="govuk-body govuk-!-margin-top-9"><a href="../email/confirmation">(go to confirmation email)</a></p>
+
     </div>
   </div>
 
