content change on appeal submission confirmation

--- a/app/views/appellant-submission/v13/email/start.html
+++ b/app/views/appellant-submission/v13/email/start.html
@@ -21,7 +21,7 @@
 
     <p class="govuk-body">We've reviewed the information you submitted and have everything we need to progress your appeal.</p>
 
-    <p class="govuk-body">We'll decide your appeal by [procedure type].</p>
+    <p class="govuk-body">We'll decide your appeal by written representations.</p>
 
     <h2 class="govuk-heading-m">
       Your appeal reference
