--- a/app/views/interested-party/v2/closed-appeals.html
+++ b/app/views/interested-party/v2/closed-appeals.html
@@ -36,9 +36,9 @@
 
     <p class="govuk-body">
       {% if data['postcode'] %}
-        33 closed appeals found for {{ data['postcode'] }}. <a href="appeal-search-address?version=" class="govuk-link">Change<span class="govuk-visually-hidden"> search address</span></a>
+        33 closed appeals found for {{ data['postcode'] }}. You cannot comment on closed appeals. <a href="appeal-search-address?version=" class="govuk-link">Search by a different postcode</a>
       {% else %}
-        33 closed appeals found for BS3 3EX. <a href="appeal-search-address?version=" class="govuk-link">Change<span class="govuk-visually-hidden"> search address</span></a>
+        33 closed appeals found for BS3 3EX. You cannot comment on closed appeals. <a href="appeal-search-address?version=" class="govuk-link">Search by a different postcode</a>
       {% endif %}
     </p>
 
@@ -107,7 +107,7 @@
           text: "Talisan Creedance"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">APP/Q999/D/20/0165971</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165971&site-address=19%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Talisan%20Creedance">APP/Q999/D/20/0165971</a>'
         },
         {
           text: "12 January 2022"
@@ -121,7 +121,7 @@
           text: "J. M. Wigstone"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">APP/Q999/D/21/0165791</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165791&site-address=2%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=J.%20M.%20Wigstone">APP/Q999/D/21/0165791</a>'
         },
         {
           text: "20 December 2021"
@@ -136,7 +136,7 @@
           text: "Jan Fish"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">APP/Q999/D/21/0166241</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166241&site-address=1%20Aubrey%20House%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Jan%20Fish">APP/Q999/D/21/0166241</a>'
         },
         {
           text: "11 July 2021"
@@ -150,7 +150,7 @@
           text: "P. J. Thames"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">APP/Q999/D/21/0166111</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166111&site-address=22%20Aubrey%20Road%2C%20BS3%203EX&appellantName=P.%20J.%20Thames">APP/Q999/D/21/0166111</a>'
         },
         {
           text: "13 June 2021"
@@ -164,7 +164,7 @@
           text: "Danny Fiakkas"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">APP/Q999/D/21/0166102</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166102&site-address=155%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Danny%20Fiakkas">APP/Q999/D/21/0166102</a>'
         },
         {
           text: "13 April 2021"
@@ -178,7 +178,7 @@
           text: "Pavarthi Sagar"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">APP/Q999/D/21/0165854</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165854&site-address=32%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Pavarthi%20Sagar">APP/Q999/D/21/0165854</a>'
         },
         {
           text: "13 April 2021"
@@ -192,7 +192,7 @@
           text: "Ash Davenant"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">APP/Q999/D/21/0165921</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0165921&site-address=8%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Ash%20Davenant">APP/Q999/D/21/0165921</a>'
         },
         {
           text: "8 March 2021"
@@ -206,7 +206,7 @@
           text: "Charlie Agadosi"
         },
         {
-          html: '<a class="govuk-link" href="appeal-details?status=closed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">APP/Q999/D/21/0166013</a>'
+          html: '<a class="govuk-link" href="appeal-details?status=completed&appealCode=0166013&site-address=1%20Vicarage%20Court%2C%20Aubrey%20Road%2C%20BS3%203EX&appellantName=Charlie%20Agadosi">APP/Q999/D/21/0166013</a>'
         },
         {
           text: "18 February 2021"
