--- a/app/views/interested-party/v2/comment-received.html
+++ b/app/views/interested-party/v2/comment-received.html
@@ -44,20 +44,20 @@
       <h2 class="govuk-heading-m">What happens next</h2>
 
       <p class="govuk-body">
-        Your comments will be shared with the applicant and local planning department.
+        Your comments will be shared with the applicant and Bristol City Council.
       </p>
 
       <p class="govuk-body">
-        An Inspector will review them when determining the appeal.
+        The Inspector will review them when determining the appeal.
       </p>
 
       <!-- <p class="govuk-body">
         We will contact you again when a decision is made.
       </p> -->
 
-      <p class="govuk-body">
+      <!-- <p class="govuk-body">
         A decision is expected by 27 May 2022.
-      </p>
+      </p> -->
 
     </section>
 
