Home page and minor email fix

--- a/app/views/appellant-submission/v13/email/confirmation.html
+++ b/app/views/appellant-submission/v13/email/confirmation.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<p><strong>Subject:</strong> We've received your planning appeal/p>
+<p><strong>Subject:</strong> We've received your planning appeal</p>
 <p><strong>From:</strong> Appeal a planning decision</p>
 
 <img src="{{ asset_path }}images/pi-logo.png" width="150"/>
