Example copy replaced placeholders and final comments link goes to appellant final comments

--- a/app/views/appellant-submission/v13/email/confirmation.html
+++ b/app/views/appellant-submission/v13/email/confirmation.html
@@ -13,16 +13,16 @@
 <div class="govuk-grid-row govuk-!-margin-top-5">
   <div class="govuk-grid-column-three-quarters">
 
-    <p class="govuk-body">Dear ((name)),</p>
+    <p class="govuk-body">Dear [your name],</p>
 
     <p class="govuk-body">We've received your planning appeal for the following site: 9617 The Avenue, Maidstone, XM26 7YS</p>
 
     <h2 class="govuk-heading-m">Local planning department:</h2>
-    <p class="govuk-body">((local planning department))</p>
+    <p class="govuk-body">City of Bradford Metropolitan District Council</p>
 
     <h2 class="govuk-heading-m">What you need to do</h2>
-    <p class="govuk-body">You need to send a copy of your appeal to ((local planning department)).</p>
-    <p class="govuk-body">You can download a copy of your appeal at <a href="javascript:preventDefault();">((link to PDF))</a>.</p>
+    <p class="govuk-body">You need to send a copy of your appeal to City of Bradford Metropolitan District Council.</p>
+    <p class="govuk-body">You can download a copy of your appeal at <a href="javascript:preventDefault();">[link to PDF]</a>.</p>
 
     <h2 class="govuk-heading-m">What happens next?</h2>
     <p class="govuk-body">We'll check you've submitted everything we need to progress your appeal. We'll contact you once we've done this.</p>
@@ -31,7 +31,9 @@
 
     <br><br>
     <p class="govuk-body">
-      Thank you,<br>
+      Thank you,
+    </p>
+    <p class="govuk-body govuk-!-margin-bottom-9">
       The Planning Inspectorate<br>
       enquiries@planninginspectorate.gov.uk
     </p>
