--- a/app/views/appellant-submission/v13/email/start.html
+++ b/app/views/appellant-submission/v13/email/start.html
@@ -26,7 +26,7 @@
     <h2 class="govuk-heading-m">
       Your appeal reference
     </h2>
-    <p class="govuk-body">((appeal reference))</p>
+    <p class="govuk-body">A/1234567</p>
 
     <h2 class="govuk-heading-m">
       Your case officer
@@ -42,16 +42,16 @@
     <p class="govuk-body">
       Appeal start date:  {{ 0 | daysInFuture }}<br>
       Questionnaire deadline:  {{ 7 | daysInFuture }}<br>
-      Statement of case deadline:  {{ 35 | daysInFuture }}<br>
+      Statements deadline:  {{ 35 | daysInFuture }}<br>
       Final comments deadline: {{ 49 | daysInFuture }}
     </p>
 
     <h2 class="govuk-heading-m">What happens next</h2>
     <p class="govuk-body">
-      ((local planning department)) completes a questionnaire about your planning application and submits their case file. They'll forward you a copy of this for your information.
+      City of Bradford Metropolitan District Council completes a questionnaire about your planning application and submits their case file. They'll forward you a copy of this for your information.
     </p>
     <p class="govuk-body">
-      Then ((local planning department)) and interested parties can respond to your appeal. They do this by submitting written statements.
+      Then City of Bradford Metropolitan District Council and interested parties can respond to your appeal. They do this by submitting written statements.
     </p>
     <p class="govuk-body">
       If we receive any statements, we'll share them with you and invite you to respond. This is called your 'final comments'.
@@ -72,18 +72,21 @@
     {{ govukInsetText({
       text: "Keep this link safe in case you decide to submit final comments later."
     }) }}
-    <p class="govuk-body">Submit your final comments at: <a href="#">https://planninginspectorate.gov.uk/final-comments-f1234567</a></p>
+    
+    <p class="govuk-body">Submit your final comments at: <a href="/final-comments/v1/appellant">https://planninginspectorate.gov.uk/final-comments-f1234567</a></p>
 
     <br><br>
+    <p class="govuk-body">
+      Thank you,
+    </p>
     <p class="govuk-body govuk-!-margin-bottom-9">
-      Thank you,<br>
       The Planning Inspectorate<br>
-      ((case team email))
+      enquiries@planninginspectorate.gov.uk
     </p>
 
     <br><br><br><br><br>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-    <p class="govuk-body govuk-!-margin-top-9"><a href="final-comments">(continue to the next part of the test)</a></p>
+    <p class="govuk-body govuk-!-margin-top-9"><a href="final-comments">Continue to the next part of the test</a></p>
 
   </div>
 </div>
