Buttons to links on the no results screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -360,9 +360,11 @@
                     </ul>
                   </div>
                 </details>
+
               </div>
 
-            </div>
+            </div> <!-- accordion content -->
+
 
             <div id="interestedparties" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-interestedparties">
 
@@ -483,8 +485,6 @@
                   <!-- <li><a href="#" target="_blank">Confluence notes</a></li> -->
                 </ul>
                 </div>
-
-              </div>
 
             </div>
 
