--- a/app/views/interested-party/v2/appeal-details.html
+++ b/app/views/interested-party/v2/appeal-details.html
@@ -136,7 +136,7 @@
         </section>
 
         <p class="govuk-body">
-          <a href="#">See the decision for this appeal</a>.
+          <a href="#">See the decision for this appeal</a>
         </p>
 
       {% endif %}
