--- a/app/views/appellant-submission/v13/full/confirmation.html
+++ b/app/views/appellant-submission/v13/full/confirmation.html
@@ -41,12 +41,12 @@
       <p class="govuk-body">
         We'll check you've submitted everything we need to progress your appeal. We'll contact you once we've done this.
       </p>
-      <p class="govuk-body">
+      <!--p class="govuk-body">
         You can find out more about the appeals process in the <a href="javascript:preventDefault();">appeal a planning decision guidance</a>.
       </p>
       <p class="govuk-body">
         <a href="javascript:preventDefault();">What did you think of this service?</a> (takes 2 minutes)
-      </p>
+      </p-->
 
       <br><br><br><br><br>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
