AS-4481 Remove claim costs task from appeal task list

--- a/app/views/appellant-submission/v13/full/task-list.html
+++ b/app/views/appellant-submission/v13/full/task-list.html
@@ -119,7 +119,7 @@
               <strong class="app-task-list__tag govuk-tag govuk-tag--grey">Not started</strong>
             {% endif %}
           </li>
-          <li class="app-task-list__item">
+          <!--li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="claiming-costs">
                 Submit a claim for costs
@@ -130,7 +130,7 @@
             {% else %}
               <strong class="app-task-list__tag govuk-tag govuk-tag--grey">Optional</strong>
             {% endif %}
-          </li>
+          </li-->
           <li class="app-task-list__item">            
             {% if (data["appealsub-"+version+"-taskliststatus-contactdetails"] == "Complete") 
                 and data["appealsub-"+version+"-taskliststatus-appealsite"] == "Complete"
